--- a/src/main/resources/templates/WebKhachHang/profile.html
+++ b/src/main/resources/templates/WebKhachHang/profile.html
@@ -278,7 +278,7 @@
           </div>
           <div class="col-md-6 mb-3">
             <label class="form-label">Mật khẩu mới</label>
-            <input type="password" class="form-control" name="matKhau" placeholder="Để trống nếu không đổi">
+            <input type="password" class="form-control" name="matKhau" placeholder="Để trống nếu không đổi" required>
           </div>
         </div>
         <button type="submit" class="btn btn-primary" id="updateProfileBtn"><i class="fas fa-save me-1"></i> Cập nhật</button>
